--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='avatar'
 DB_USER='root'
-DB_PASSWORD='***'
+DB_PASSWORD='xuxuxuxu'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
