--- a/.env.dev
+++ b/.env.dev
@@ -1,21 +1,21 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 
-DB_HOST=localhost
-DB_DATABASE='avatar'
-DB_USER='aluno'
-DB_PASSWORD='Sptech#2024'
-DB_PORT=3307
-
-
-APP_PORT=3333
-APP_HOST=localhost
-
 # DB_HOST=localhost
 # DB_DATABASE='avatar'
-# DB_USER='root'
-# DB_PASSWORD='xuxuxuxu'
-# DB_PORT=3306
+# DB_USER='aluno'
+# DB_PASSWORD='Sptech#2024'
+# DB_PORT=3307
+
 
 # APP_PORT=3333
 # APP_HOST=localhost
+
+DB_HOST=localhost
+DB_DATABASE='avatar'
+DB_USER='root'
+DB_PASSWORD='xuxuxuxu'
+DB_PORT=3306
+
+APP_PORT=3333
+APP_HOST=localhost
